package protocol;

// Protocol version 1.0
enum ProtocolVersionMajor {
  PROTOCOL_VERSION_MAJOR = 1;
}
enum ProtocolVersionMinor {
  PROTOCOL_VERSION_MINOR = 1;
}

enum ConstantNodeId {
  ROOT = 13;
  TYPES = 15;
  OBJECTS = 100;
  DEVICES = 109;
}

enum AttributeId {
  DATA_VALUE = 1;
  EVENTS = 2;
  NODES = 3;
}

message Status {
  required uint32 code = 1;
}

message Qualifier {
  enum Severity {
    // Good value.
    GOOD = 0;
    // Value is not up-to-date.
    UNCERTAIN = 1;
    // Subscription has failed.
    BAD = 2;
  }

  enum SubCode {
    GOOD_NORMAL = 0;
    GOOD_BACKUP = 1;
    GOOD_MANUAL = 2;
    GOOD_SIMULATED = 3;
    UNCERTAIN_DEVICE = 10;
    UNCERTAIN_OFFLINE = 11;
    UNCERTAIN_MISCONFIGURED = 12;
    UNCERTAIN_STALE = 13;
    BAD_FAILED = 20;
  }

  enum Limit {
    NORMAL = 0;
    LO = 1;
    HI = 2;
    LOLO = 3;
    HIHI = 4;
  }

  required Severity severity = 1;
  optional SubCode sub_code = 2;
  optional Limit limit = 3;
}

message NodeId {
  optional uint32 number = 1;
  optional string string = 3;
}

message Value {
  optional bool   bool_value    = 1;
  optional int32  int32_value   = 2;
  optional int64  int64_value   = 3;
  optional double double_value  = 4;
  optional string string_value  = 5;
  optional NodeId node_id_value = 6;
}

message DataValue {
  required uint64 server_timestamp = 1;
  optional uint64 source_timestamp = 2;
  optional Value value = 3;
  required uint32 qualifier = 4;
}

message Event {
  optional uint32 monitored_item_id = 1;
  required uint64 time = 2;
  required uint32 severity = 3;
  optional NodeId source_node_id = 4;
  optional NodeId user_node_id = 5;
  optional Value value = 6;
  optional uint32 qualifier = 7;
  optional string message = 8;
  optional bool acknowledged = 9;
  optional uint64 acknowledge_id = 10;
  optional uint64 acknowledge_time = 11;
  optional NodeId acknowledge_user_id = 12;
}

message CreateSession {
  required string user_name = 1;
  optional string password = 2;
  optional bool delete_existing = 3;

  // Assume version 0.0 if it isn't specified.
  required uint32 protocol_version_major = 4;
  required uint32 protocol_version_minor = 5;
}

message CreateSessionResult {
  optional string token = 1;
  optional NodeId user_node_id = 2;
  optional uint32 user_rights = 3;

  // Current protocol version of server.
  required uint32 protocol_version_major = 4;
  required uint32 protocol_version_minor = 5;
}

message DeleteSession {
  optional string token = 1;
}

message Property {
  required uint32 id = 1;
  required Value value = 2;
}

message Node {
  required NodeId node_id = 1;
  required NodeId type_node_id = 2;
  required NodeId parent_node_id = 3;
  repeated Property properties = 4;
}

message CreateNode {
  optional NodeId requested_node_id = 1;
  required NodeId type_node_id = 2;
  required NodeId parent_node_id = 3;
  repeated Property properties = 4;
}

message CreateNodeResult {
  required NodeId node_id = 1;
}

message DeleteNode {
  required NodeId node_id = 2;
  optional bool return_references = 10;
}

message DeleteNodeResult {
  repeated NodeId references = 1;
}

message ModifyNode {
  required NodeId node_id = 1;
  optional NodeId new_parent_node_id = 3;
  repeated Property properties = 4;
}

message ChangePassword {
  required uint32 request_id = 1;
  required NodeId user_node_id = 2;
  required string current_password = 3;
  required string new_password = 4;
}

message Write {
  required NodeId node_id = 1;
  required double value = 2;
  optional bool manual = 3;
  optional bool locked = 4;
  optional bool select = 5;
}

// Calls

message DeviceCommand {
  required NodeId node_id = 1;
  required NodeId command_id = 2;
  repeated Value argument = 3;
}

message Acknowledge {
  required uint64 event_id = 1;
  optional string comment = 2;
}

message Call {
  optional DeviceCommand device_command = 1;
  optional Acknowledge acknowledge = 2;
}

message EventFilter {
  optional bool acked = 1;
  optional bool unacked = 2;
}

message HistoryRead {
  required NodeId node_id = 1;
  required AttributeId attribute_id = 2;
  required uint64 from = 3;
  optional uint64 to = 4;
  optional EventFilter event_filter  = 5;
}

message HistoryReadResult {
  repeated DataValue values = 1;
  repeated Event events = 2;
}

message CreateSubscription {
  optional uint32 update_rate_ms = 1;
  optional EventFilter event_filter = 2;
}

message CreateSubscriptionResult {
  optional uint32 subscription_id = 1;
}

message DeleteSubscription {
  required uint32 subscription_id = 1;
}

message CreateMonitoredItem {
  required uint32 subscription_id = 1;
  required NodeId node_id = 2;
  required AttributeId attribute_id = 3;
}

message CreateMonitoredItemResult {
  optional uint32 monitored_item_id = 21;
}

message DeleteMonitoredItem {
  required uint32 subscription_id = 1;
  required uint32 monitored_item_id = 2;
}

message CreateView {
  required NodeId parent_node_id = 1;
}

message CreateViewResult {
  optional uint32 view_id = 1;
  repeated Node nodes = 2;
}

message DeleteView {
  required uint32 view_id = 1;
}

message Request {
  optional uint32 request_id = 1;

  optional CreateSession create_session = 10;
  optional DeleteSession delete_session = 11;

  optional Write write = 12;
  optional Call call = 13;

  optional CreateSubscription create_subscription = 20;
  optional DeleteSubscription delete_subscription = 21;

  optional CreateMonitoredItem create_monitored_item = 30;
  optional DeleteMonitoredItem delete_monitored_item = 31;

  optional HistoryRead history_read = 40;

  optional CreateNode create_node = 50;
  optional DeleteNode delete_node = 51;
  optional ModifyNode modify_node = 52;
  optional ChangePassword change_password = 53;

  optional CreateView create_view = 60;
  optional DeleteView delete_view = 61;
}

message Response {
  required uint32 request_id = 1;
  required Status status = 2;

  optional CreateSessionResult create_session_result = 10;

  optional CreateSubscriptionResult create_subscription_result = 20;

  optional CreateMonitoredItemResult create_monitored_item_result = 30;

  optional HistoryReadResult history_read_result = 40;

  optional CreateNodeResult create_node_result = 50;
  optional DeleteNodeResult delete_node_result = 51;

  optional CreateViewResult create_view_result = 60;
}

message DataChange {
  required uint32 monitored_item_id = 1;
  required DataValue data_value = 2;
}

message NodeChange {
  enum ChangeType {
    CREATED = 0;
    DELETED = 1;
    MODIFIED = 2;
  }

  required ChangeType change_type = 1;
  required NodeId node_id = 2;
  optional NodeId type_node_id = 3;
  optional NodeId parent_node_id = 4;
  repeated Property properties = 5;
}

message SessionDeleted {
}

message Notification {
  optional uint32 subscription_id = 1;
  repeated DataChange data_changes = 2;
  repeated NodeChange node_changes = 3;
  repeated Event events = 4;
  optional SessionDeleted session_deleted = 5;
}

message Message {
  repeated Notification notifications = 1;
  repeated Request requests = 2;
  repeated Response responses = 3;
}